Fighting through restrictions on conflicting interface method definitions. Java doesn't like child interfaces redefining the output type of a parent method even if the parent signature is compatible with the child. Problem solved, but quite a mess.